发布1.1版本: 1. 完善测试用例 2. 提取微信请求基类，不同类型的请求初始化不同的子类

--- a/mars-demo/pom.xml
+++ b/mars-demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mars-project</artifactId>
         <groupId>com.github.howwrite</groupId>
-        <version>1.0.RELEASE</version>
+        <version>1.1.RELEASE</version>
     </parent>
     <artifactId>mars-demo</artifactId>
     <name>mars-demo</name>
@@ -19,11 +19,16 @@
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.github.howwrite</groupId>
             <artifactId>mars</artifactId>
