--- a/mars/src/main/resources/mars-messages.properties
+++ b/mars/src/main/resources/mars-messages.properties
@@ -4,3 +4,4 @@ mars.parse.xml.fail=Parse xml failed
 mars.check.wx.signature.fail=Failed to verify WeChat signature
 mars.create.wx.msg.crypt.fail=Failed to create WeChat message encryption and decryption tool
 mars.not.found.path=Please configure :'mars.path'
+not.currently.supported.type=This type of request is not currently supported
