--- a/mars/pom.xml
+++ b/mars/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.howwrite</groupId>
         <artifactId>mars-project</artifactId>
-        <version>1.1.RELEASE</version>
+        <version>1.3.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -43,6 +43,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
     </dependencies>
 
