--- a/mars/src/main/resources/mars-messages.properties
+++ b/mars/src/main/resources/mars-messages.properties
@@ -1,7 +1,17 @@
-unable.to.process.this.request=Could not process this request
-mars.encrypt.fail=Encryption failed
-mars.parse.xml.fail=Parse xml failed
-mars.check.wx.signature.fail=Failed to verify WeChat signature
-mars.create.wx.msg.crypt.fail=Failed to create WeChat message encryption and decryption tool
-mars.not.found.path=Please configure :'mars.path'
-not.currently.supported.type=This type of request is not currently supported
+mars.unable.to.process.this.request=无法处理此请求
+mars.encrypt.fail=加密失败
+mars.parse.xml.fail=解析xml失败
+mars.check.wx.signature.fail=验证微信签名失败
+mars.create.wx.msg.crypt.fail=创建微信消息加解密工具失败
+mars.not.found.path=请配置:'mars.path'
+mars.not.currently.supported.type=暂时未支持该类型的请求
+mars.response.to.user.name.can.not.be.empty=结果中的 toUserName 不能为空
+mars.response.from.user.name.can.not.be.empty=结果中的 fromUserName 不能为空
+mars.response.content.can.not.be.empty=结果中的 content 不能为空
+mars.response.media.id.can.not.be.empty=结果中的 mediaId 不能为空
+mars.response.thumb.media.id.can.not.be.empty=结果中的 thumbMediaId 不能为空
+mars.response.article.list.can.not.be.empty=结果中的 文章列表 不能为空
+mars.response.url.can.not.be.empty=结果中的 url 不能为空
+mars.response.title.can.not.be.empty=结果中的 title 不能为空
+mars.response.pic.url.can.not.be.empty=结果中的 picUrl 不能为空
+mars.response.description.can.not.be.empty=结果中的 description 不能为空
