--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,12 @@
     <groupId>com.github.howwrite</groupId>
     <artifactId>mars-project</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.RELEASE</version>
+    <version>1.3.RELEASE</version>
     <modules>
         <module>mars-demo</module>
         <module>mars</module>
+        <module>mars-integration</module>
+        <module>mars-integration-demo</module>
     </modules>
 
     <description>mars project</description>
@@ -26,6 +28,7 @@
         <lang3.version>3.9</lang3.version>
         <dom4j.version>2.1.1</dom4j.version>
         <guava.version>28.1-jre</guava.version>
+        <hutool.version>5.2.5</hutool.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -33,6 +36,11 @@
             <dependency>
                 <groupId>com.github.howwrite</groupId>
                 <artifactId>mars</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.howwrite</groupId>
+                <artifactId>mars-integration</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!-- 子模块依赖end -->
@@ -43,7 +51,11 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.dom4j</groupId>
                 <artifactId>dom4j</artifactId>
@@ -67,11 +79,11 @@
 
     <distributionManagement>
         <repository>
-            <id>mars-maven</id>
+            <id>release</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
         <snapshotRepository>
-            <id>mars-maven</id>
+            <id>release</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
