feature: 1. 增加获取AccessToken接口 2. 增加获取临时资源接口 3. 完善异常体系 4. 增加AccessToken缓存接口并增加redis实现 5. 增加json解析接口，并增加jackSon实现

--- a/mars-integration-demo/pom.xml
+++ b/mars-integration-demo/pom.xml
@@ -16,6 +16,16 @@
             <groupId>com.github.howwrite</groupId>
             <artifactId>mars-integration</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
