--- a/mars-integration-demo/src/main/resources/application.yml
+++ b/mars-integration-demo/src/main/resources/application.yml
@@ -4,5 +4,10 @@ mars:
     app-id: ${WEIXIN_APP_ID:}
     encoding-aes-key: ${WEIXIN_AES_KEY:}
     token: ${WEIXIN_TOKEN:}
+    app-secret: ${WEIXIN_SECRET:}
 server:
   port: 80
+spring:
+  redis:
+    password: ${REDIS_PASSWORD:}
+    host: localhost
