feature: 1. 增加全局缓存接口，撤销AccessToken缓存接口
fix:
1. 修复接收位置信息异常的问题
2. 修复部分获取临时资源失败但返回成功的问题
3. 修复mars模块传递依赖spring-boot-starter-web的问题
4. 修复未引入redis依赖但是加载redis实现类的问题

--- a/mars/pom.xml
+++ b/mars/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,10 +58,6 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 </project>
