--- a/mars-integration/pom.xml
+++ b/mars-integration/pom.xml
@@ -15,6 +15,12 @@
             <groupId>com.github.howwrite</groupId>
             <artifactId>mars</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 
