feature: 1. 增加fastjson版本的json

--- a/mars-demo/pom.xml
+++ b/mars-demo/pom.xml
@@ -28,6 +28,11 @@
             <groupId>com.github.howwrite</groupId>
             <artifactId>mars</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
